# react-perf-analyzer

./: .gitignore  .looper.yml.example  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SAST_PLAN.md  action.yml  react-perf-rules.toml.example
.github/workflows/: ci.yml  gitlab-ci-template.yml
src/: analyzer.rs  baseline.rs  changed_files.rs  cli.rs  custom_rules.rs  file_loader.rs  main.rs  orchestrator.rs  parser.rs  reporter.rs  utils.rs
src/rules/: large_component.rs  mod.rs  no_array_index_key.rs  no_component_in_component.rs  no_expensive_in_render.rs  no_inline_jsx_fn.rs  no_json_in_render.rs  no_math_random_in_render.rs  no_new_context_value.rs  no_new_in_jsx_prop.rs  no_object_entries_in_render.rs  no_regex_in_render.rs  no_unstable_hook_deps.rs  no_use_state_lazy_init_missing.rs  no_useless_memo.rs  unstable_props.rs
src/rules/perf/: large_component.rs  mod.rs  no_array_index_key.rs  no_component_in_component.rs  no_expensive_in_render.rs  no_inline_jsx_fn.rs  no_json_in_render.rs  no_math_random_in_render.rs  no_new_context_value.rs  no_new_in_jsx_prop.rs  no_object_entries_in_render.rs  no_regex_in_render.rs  no_unstable_hook_deps.rs  no_use_state_lazy_init_missing.rs  no_useless_memo.rs  unstable_props.rs
src/rules/security/: mod.rs
src/rules/security/react/: mod.rs  no_dangerously_set_inner_html_unescaped.rs  no_hardcoded_secret_in_jsx.rs  no_postmessage_wildcard.rs  no_unsafe_href.rs  no_xss_via_jsx_prop.rs
templates/: gitlab-ci-template.yml  react-perf-analyzer.yml
test_fixtures/: bad_component.tsx  good_component.tsx  inline_fn_cases.tsx  large_component_cases.tsx  no_array_index_key_cases.tsx  no_component_in_component_cases.tsx  no_expensive_in_render_cases.tsx  no_json_in_render_cases.tsx  no_math_random_in_render_cases.tsx  no_new_context_value_cases.tsx  no_new_in_jsx_prop_cases.tsx  no_object_entries_in_render_cases.tsx  no_regex_in_render_cases.tsx  no_unstable_hook_deps_cases.tsx  no_use_state_lazy_init_cases.tsx  no_useless_memo_cases.tsx  unstable_props_cases.tsx
test_fixtures/security/react/: no_dangerously_set_inner_html_cases.tsx  no_hardcoded_secret_in_jsx_cases.tsx  no_postmessage_wildcard_cases.tsx  no_unsafe_href_cases.tsx  no_xss_via_jsx_prop_cases.tsx
