[package]
name = "react-perf-analyzer"
version = "0.4.0"
edition = "2021"
description = "Static analysis CLI for React performance anti-patterns"
license = "MIT"
repository = "https://github.com/rashvish18/react-perf-analyzer"
homepage = "https://github.com/rashvish18/react-perf-analyzer"
keywords = ["react", "performance", "linter", "cli", "oxc"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "react-perf-analyzer"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Parallel file processing
rayon = "1.10"

# Recursive directory traversal
walkdir = "2"

# JSON output serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# OXC: Rust-native JS/TS/JSX parser
# All oxc_* crates MUST share the same version — they are a monorepo.
# Verify the latest matching version at: https://crates.io/crates/oxc_parser
oxc_allocator = "0.67"
oxc_parser    = "0.67"
oxc_ast       = "0.67"
oxc_span      = "0.67"
oxc_ast_visit = "0.67"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
