[package]
name = "react-perf-analyzer"
version = "0.5.0"
edition = "2021"
description = "React performance + security scanner. Finds perf anti-patterns, XSS, secrets, and CVEs. Single binary, zero config, SARIF output."
license = "MIT"
repository = "https://github.com/rashvish18/react-perf-analyzer"
homepage = "https://github.com/rashvish18/react-perf-analyzer"
documentation = "https://github.com/rashvish18/react-perf-analyzer#readme"
readme = "README.md"
keywords = ["react", "security", "linter", "sast", "oxc"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["test_fixtures/", "*.sarif", "react-perf-report.html"]

[[bin]]
name = "react-perf-analyzer"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Parallel file processing
rayon = "1.10"

# Recursive directory traversal
walkdir = "2"

# JSON output serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# TOML parsing for custom rule DSL (Phase 8) — basic-toml is deserialize-only
# and avoids pulling in the heavy toml_edit + winnow chain (~6s compile time)
basic-toml = "0.1"

# Regex matching for custom rule patterns (Phase 8) — regex-lite omits the
# full Unicode DFA engine, cutting compile time by ~10s vs the `regex` crate
regex-lite = "0.1"

# Glob pattern matching for file_glob in custom rules (Phase 8)
glob = "0.3"

# OXC: Rust-native JS/TS/JSX parser
# All oxc_* crates MUST share the same version — they are a monorepo.
# Verify the latest matching version at: https://crates.io/crates/oxc_parser
oxc_allocator = "0.67"
oxc_parser    = "0.67"
oxc_ast       = "0.67"
oxc_span      = "0.67"
oxc_ast_visit = "0.67"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
